<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_tasks_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_dialog_title"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/inter_24pt_semi_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_tasks_dialog_not_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_completed_tasks_dialog"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/filter_tasks_dialog_title"
        app:layout_constraintStart_toStartOf="@+id/filter_tasks_dialog_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_tasks_dialog_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_tasks_dialog"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/filter_tasks_dialog_not_completed"
        app:layout_constraintStart_toStartOf="@+id/filter_tasks_dialog_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_tasks_dialog_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_tasks_filter_dialog"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/filter_tasks_dialog_completed"
        app:layout_constraintStart_toStartOf="@+id/filter_tasks_dialog_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>