<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/md_theme_inverseOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/task_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_18pt_bold"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"
                android:text="@string/card_task_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/task_date"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/task_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/card_task_date"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/task_title"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/task_description"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/card_task_description"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/task_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_form_task_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/form_task_completed"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipIconVisible="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <FrameLayout
                    android:id="@+id/delete_icon_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circular_background"
                    android:padding="5dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_delete_24dp"
                        app:tint="@color/md_theme_onErrorContainer" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>